new lesson files

--- a/js_jquery/week-1/1.html
+++ b/js_jquery/week-1/1.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script>
-  alert('hi');
-  </script>
 </head>
 <body>
+  <p> Hello </p>
+  <script>
+  //alert('hi');
+  document.body.style.backgroundColor = "pink"
+  document.body.style.fontSize = "500%"
+  </script>
 </body>
 </html>
